package com.firdausam.dicodingjcomposesub.util

const val TagLoading = "loading"
const val TagEmpty = "empty"
const val TagError = "error"
const val TagListItem = "list_item"
const val TagDetail = "detail"
const val SearchField = "search_field"