<resources>
    <string name="app_name">FAM Anime</string>
    <string name="home">Home</string>
    <string name="detail">Detail</string>
    <string name="favorite">Favorite</string>
    <string name="about">About</string>
    <string name="menu_home">home_page</string>
    <string name="menu_favorite">favorite_page</string>
    <string name="menu_about">about_page</string>
    <string name="back">Back</string>
    <string name="members_count">%d members</string>
    <string name="error_message">Sorry for Error</string>
    <string name="empty_message">Empty Data</string>
    <string name="info_title">%s: </string>
    <string name="information">Information</string>
    <string name="ranked">Ranked</string>
    <string name="popularity">Popularity</string>
    <string name="members">Members</string>
    <string name="type">Type</string>
    <string name="episodes">Episodes</string>
    <string name="status">Status</string>
    <string name="aired">Aired</string>
    <string name="premiered">Premiered</string>
    <string name="broadcast">broadcast</string>
    <string name="producers">Producers</string>
    <string name="licensors">Licensors</string>
    <string name="studios">Studios</string>
    <string name="source">Source</string>
    <string name="genres">Genres</string>
    <string name="demographic">Demographic</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="synopsis">Synopsis</string>
    <string name="background">Background</string>
    <string name="placeholder_search">Find anime</string>
    <string name="save_to_favorite">%s Saved to Favorite</string>
    <string name="to_favorite">To Favorite</string>
    <string name="favorite_active">favorite active</string>
    <string name="favorite_inactive">favorite inactive</string>
    <string name="my_name">Firdaus Akhmad Muttaqin</string>
    <string name="profile">profile</string>
    <string name="dicoding">dicoding</string>
    <string name="linkedin">linkedin</string>
    <string name="github">github</string>
    <string name="my_email_dicoding">mamenz.etheridge@gmail.com</string>
    <string name="my_dicoding">https://www.dicoding.com/users/firdausam</string>
    <string name="my_linkedin">https://www.linkedin.com/in/firdaus-akhmad-muttaqin-b24405119/</string>
    <string name="my_github">https://github.com/firdausam</string>
    <string name="message">message</string>
</resources>